<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu_id"
        android:icon="@drawable/icon_menu_home"
        android:menuCategory="system"
        android:title="@string/menu_home_label"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/icon_menu_more_vert"
        android:menuCategory="system"
        android:title="@string/menu_menubutton_data_label"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/refreshData_menu_id"
                android:icon="@drawable/icon_menu_refresh_data"
                android:title="@string/menu_refresh_data_label" />

            <item
                android:id="@+id/about_menu_id"
                android:icon="@drawable/icon_menu_about_us"
                android:title="@string/menu_about_label" />

            <item
                android:id="@+id/quit_menu_id"
                android:icon="@drawable/icon_menu_exit_app"
                android:title="@string/menu_quit_label" />

        </menu>
    </item>

</menu>